<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/links"
        android:icon="@drawable/link_24px"
        android:id="@+id/item_links"/>

    <item
        android:title="@string/courses"
        android:icon="@drawable/import_contacts_24px"
        android:id="@+id/item_courses"/>

    <item
        android:title="@string/add"
        android:icon="@drawable/add_24px"
        android:id="@+id/item_add"/>

    <item
        android:title="@string/campaigns"
        android:icon="@drawable/campaign_24px"
        android:id="@+id/item_campaigns"/>

    <item
        android:title="@string/Profile"
        android:icon="@drawable/account_circle_24px"
        android:id="@+id/item_profile"/>

</menu>